--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.3.0
 colorama==0.4.6
 decorator==5.2.1
 fastapi==0.119.0
+greenlet==3.2.4
 h11==0.16.0
 idna==3.11
 imageio==2.37.0
@@ -12,11 +13,13 @@ moviepy==2.2.1
 numpy==2.3.3
 pillow==11.3.0
 proglog==0.1.12
+psycopg2-binary==2.9.11
 pydantic==2.12.0
 pydantic_core==2.41.1
 python-dotenv==1.1.1
 python-multipart==0.0.20
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 starlette==0.48.0
 tqdm==4.67.1
 typing-inspection==0.4.2
