--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.11.0
+billiard==4.2.2
+celery==5.5.3
 click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 colorama==0.4.6
 decorator==5.2.1
 fastapi==0.119.0
@@ -9,19 +15,28 @@ h11==0.16.0
 idna==3.11
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
+kombu==5.5.4
 moviepy==2.2.1
 numpy==2.3.3
+packaging==25.0
 pillow==11.3.0
 proglog==0.1.12
+prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 pydantic==2.12.0
 pydantic_core==2.41.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+redis==6.4.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.48.0
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 uvicorn==0.37.0
+vine==5.1.0
+wcwidth==0.2.14
