Added authentication for api with fixes in video tools about users and their effects in the endpoint, also added a postman collecction to test all tools

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ original_videos/*
 processed_videos/*
 
 .idea/
+
+# Archivos de documentacion
+GUIA_POSTMAN.md
+RESUMEN_FINAL.md
+GUIA_POSTGRESQL_DBEAVER.md
+CHECKLIST.md
+AUTENTICACION_README.md
