Crear docker compose para la base de datos postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: anb_postgres
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-anb}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d anb"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   redis:
     image: redis
     ports:
@@ -9,3 +28,7 @@ services:
       - "8081:8081"
     environment:
       - REDIS_HOSTS=local:redis:6379
+
+volumes:
+  postgres_data:
+    driver: local
