--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,62 @@
-# Core Framework
-fastapi==0.119.0
-uvicorn==0.37.0
-pydantic==2.12.0
-pydantic_core==2.41.1
-starlette==0.48.0
-
-# Database
-SQLAlchemy==2.0.44
-psycopg[binary]>=3.0
-greenlet==3.2.4
-
-# Authentication
-PyJWT==2.6.0
-bcrypt==4.0.1
-email-validator
-
-# Task Queue
-celery==5.5.3
-redis==6.4.0
 amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.11.0
+bcrypt==4.0.1
 billiard==4.2.2
-kombu==5.5.4
-vine==5.1.0
-
-# Video Processing
-moviepy==2.2.1
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
-numpy==2.3.3
-pillow==11.3.0
-decorator==5.2.1
-proglog==0.1.12
-tqdm==4.67.1
-
-# File Upload
-python-multipart==0.0.20
-
-# Utilities
-python-dotenv==1.1.1
-python-dateutil==2.9.0.post0
-requests==2.28.1
+celery==5.5.3
+certifi==2025.10.5
+charset-normalizer==2.1.1
 click==8.3.0
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
-prompt_toolkit==3.0.52
-packaging==25.0
-six==1.17.0
 colorama==0.4.6
+decorator==5.2.1
+dnspython==2.8.0
+email-validator==2.3.0
+Faker==37.11.0
+fastapi==0.119.0
+fastapi-utils==0.8.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+iniconfig==2.1.0
+kombu==5.5.4
+moviepy==2.2.1
+mypy_extensions==1.1.0
+numpy==2.3.3
+packaging==25.0
+pillow==11.3.0
+pluggy==1.6.0
+proglog==0.1.12
+prompt_toolkit==3.0.52
+psutil==5.9.8
+psycopg==3.2.10
+psycopg-binary==3.2.10
+psycopg2-binary==2.9.11
+pydantic==2.12.0
+pydantic_core==2.41.1
+Pygments==2.19.2
+PyJWT==2.6.0
+pytest==8.4.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+redis==6.4.0
+requests==2.28.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+starlette==0.48.0
+tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
-h11==0.16.0
-idna==3.11
-anyio==4.11.0
-sniffio==1.3.1
+urllib3==1.26.20
+uvicorn==0.37.0
+vine==5.1.0
 wcwidth==0.2.14
