--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ pydantic_core==2.41.1
 Pygments==2.19.2
 PyJWT==2.6.0
 pytest==8.4.2
+pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
