Fixed all issues detected by sonarqube and report pass

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,4 +24,4 @@ sonar.python.version=3.9,3.10,3.11,3.12
 sonar.sourceEncoding=UTF-8
 
 # Exclusiones adicionales
-sonar.coverage.exclusions=**/tests/**,**/venv/**,setup_local_db.py,reset_db.py
+sonar.coverage.exclusions=**/tests/**,**/venv/**,setup_local_db.py,reset_db.py,db_utils.py
