--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -66,12 +66,9 @@ jobs:
           pytest --cov=. --cov-report=xml --cov-report=term
         continue-on-error: true
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2.1.1
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=MISW4204-202515-Grupo-7
-            -Dsonar.organization=misw4204-202515-grupo-7
+          SONAR_HOST_URL: https://sonarcloud.io
