Fix: Configure main branch for SonarCloud analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,9 @@ sonar.organization=misw4204-202515-grupo-7
 sonar.projectName=MISW4204-202515-Grupo-7
 sonar.projectVersion=1.0
 
+# Configurar rama principal
+sonar.branch.name=main
+
 # Rutas del código fuente
 sonar.sources=.
 sonar.exclusions=**/venv/**,**/__pycache__/**,**/tests/**,**/original_videos/**,**/processed_videos/**,**/assets/**,**/collections/**
